--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -158,6 +158,7 @@
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <ComboBox
@@ -240,6 +241,22 @@
                 Grid.Column="4"
                 VerticalAlignment="Center"
                 Text="ms/次" />
+
+            <CheckBox
+                Grid.Column="5"
+                Margin="10,0,0,0"
+                Content="HEX发送"
+                IsChecked="{Binding SendHex}">
+                <b:Interaction.Triggers>
+                    <b:EventTrigger EventName="Checked">
+                        <b:InvokeCommandAction Command="{Binding SendHexCheckedCommand}" />
+                    </b:EventTrigger>
+
+                    <b:EventTrigger EventName="Unchecked">
+                        <b:InvokeCommandAction Command="{Binding SendHexUncheckedCommand}" />
+                    </b:EventTrigger>
+                </b:Interaction.Triggers>
+            </CheckBox>
         </Grid>
 
         <Grid Grid.Row="3">
@@ -261,33 +278,17 @@
                 <Grid.RowDefinitions>
                     <RowDefinition />
                     <RowDefinition />
-                    <RowDefinition />
                 </Grid.RowDefinitions>
 
-                <CheckBox
-                    Grid.Row="0"
-                    Content="HEX发送"
-                    IsChecked="{Binding SendHex}">
-                    <b:Interaction.Triggers>
-                        <b:EventTrigger EventName="Checked">
-                            <b:InvokeCommandAction Command="{Binding SendHexCheckedCommand}" />
-                        </b:EventTrigger>
-
-                        <b:EventTrigger EventName="Unchecked">
-                            <b:InvokeCommandAction Command="{Binding SendHexUncheckedCommand}" />
-                        </b:EventTrigger>
-                    </b:Interaction.Triggers>
-                </CheckBox>
-
                 <Button
-                    Grid.Row="1"
-                    Margin="0,7"
+                    Grid.Row="0"
                     HorizontalAlignment="Stretch"
                     Command="{Binding ClearMessageCommand}"
                     Content="清屏" />
 
                 <Button
-                    Grid.Row="2"
+                    Grid.Row="1"
+                    Margin="0,10,0,0"
                     HorizontalAlignment="Stretch"
                     Background="{DynamicResource BackgroundBrush}"
                     BorderThickness="0"
