--- a/DevKit/Dialogs/ExCommandDialog.xaml
+++ b/DevKit/Dialogs/ExCommandDialog.xaml
@@ -8,7 +8,7 @@
     xmlns:prism="http://prismlibrary.com/"
     xmlns:vm="clr-namespace:DevKit.ViewModels"
     Width="400"
-    Height="135"
+    Height="180"
     d:DataContext="{d:DesignInstance Type=vm:ExCommandDialogViewModel}"
     Background="White"
     mc:Ignorable="d">
@@ -30,6 +30,7 @@
     <Border BorderBrush="{DynamicResource DarkDefaultBrush}" BorderThickness="0,1,0,0">
         <Grid>
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
@@ -57,7 +58,14 @@
                     TextWrapping="NoWrap" />
             </Grid>
 
-            <Grid Grid.Row="1" Margin="10">
+            <CheckBox
+                Grid.Row="1"
+                Margin="10"
+                HorizontalAlignment="Right"
+                Content="HEX"
+                IsChecked="{Binding IsHexChecked}" />
+
+            <Grid Grid.Row="2" Margin="10,0">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto" />
                     <ColumnDefinition />
@@ -79,25 +87,14 @@
                     TextWrapping="NoWrap" />
             </Grid>
 
-            <Grid Grid.Row="2" Margin="10,0">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition />
-                    <ColumnDefinition Width="Auto" />
-                </Grid.ColumnDefinitions>
-
-                <Button
-                    Grid.Column="0"
-                    HorizontalAlignment="Stretch"
-                    Command="{Binding ExtensionCommandSaveCommand}"
-                    Content="保存指令"
-                    Style="{StaticResource ButtonPrimary}" />
-
-                <CheckBox
-                    Grid.Column="1"
-                    Margin="10,0,0,0"
-                    Content="HEX"
-                    IsChecked="{Binding IsHexChecked}" />
-            </Grid>
+            <Button
+                Grid.Row="3"
+                Margin="10,0,10,10"
+                HorizontalAlignment="Stretch"
+                VerticalAlignment="Bottom"
+                Command="{Binding ExtensionCommandSaveCommand}"
+                Content="保存指令"
+                Style="{StaticResource ButtonPrimary}" />
         </Grid>
     </Border>
 </UserControl>
