--- a/DevKit/Views/ColorResourceView.xaml
+++ b/DevKit/Views/ColorResourceView.xaml
@@ -19,6 +19,7 @@
             <Setter Property="FontSize" Value="14" />
         </Style>
 
+        <cvt:AlphaValueConverter x:Key="AlphaValueConverterKey" />
         <cvt:ColorTagForegroundConverter x:Key="ColorTagForegroundConverterKey" />
     </UserControl.Resources>
 
@@ -144,7 +145,7 @@
 
                         <TextBlock Grid.Column="0" Text="透明度（A）" />
 
-                        <TextBlock Grid.Column="1" Text="{Binding Value, ElementName=AlphaSlider, StringFormat={}{0:P0}}" />
+                        <TextBlock Grid.Column="1" Text="{Binding Value, ElementName=AlphaSlider, Converter={StaticResource AlphaValueConverterKey}}" />
                     </Grid>
                 </Border>
 
@@ -152,13 +153,11 @@
                     x:Name="AlphaSlider"
                     Grid.Row="1"
                     Margin="0,10"
-                    hc:TipElement.StringFormat="P0"
                     hc:TipElement.Visibility="Collapsed"
                     IsSnapToTickEnabled="True"
-                    Maximum="1"
+                    Maximum="255"
                     Minimum="0"
-                    TickFrequency="0.01"
-                    Value="1">
+                    Value="255">
                     <b:Interaction.Triggers>
                         <b:EventTrigger EventName="ValueChanged">
                             <b:InvokeCommandAction Command="{Binding AlphaValueChangedCommand}" CommandParameter="{Binding ElementName=AlphaSlider}" />
