--- a/DevKit/App.xaml
+++ b/DevKit/App.xaml
@@ -2,13 +2,32 @@
     x:Class="DevKit.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:prism="http://prismlibrary.com/">
+    xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:prism="http://prismlibrary.com/"
+    xmlns:tb="http://www.hardcodet.net/taskbar"
+    xmlns:vm="clr-namespace:DevKit.ViewModels"
+    mc:Ignorable="d">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <tb:TaskbarIcon
+                x:Key="TrayIcon"
+                d:DataContext="{d:DesignInstance vm:TrayIconViewModel}"
+                IconSource="/Images/launcher.ico"
+                LeftClickCommand="{Binding ShowWindowCommand}"
+                ToolTipText="DevKit">
+                <tb:TaskbarIcon.ContextMenu>
+                    <ContextMenu Width="180">
+                        <MenuItem Command="{Binding ShowWindowCommand}" Header="显示主界面" />
+                        <MenuItem Command="{Binding ExitApplicationCommand}" Header="退出DevKit程序" />
+                    </ContextMenu>
+                </tb:TaskbarIcon.ContextMenu>
+            </tb:TaskbarIcon>
         </ResourceDictionary>
     </Application.Resources>
 </prism:PrismApplication>
