refactor(DevKit): 移除扩展指令按钮的图标和颜色设置
- 在 TcpClientView.xaml 和 UdpClientView.xaml 中移除了扩展指令按钮的图标、字体和颜色设置
- 将按钮内容直接设置为"添加扩展指令"文本
- 简化了按钮的 XAML 代码，提高了代码的可读性和维护性

--- a/DevKit/Views/TcpClientView.xaml
+++ b/DevKit/Views/TcpClientView.xaml
@@ -235,10 +235,7 @@
                 Grid.Column="1"
                 Margin="10,0"
                 Command="{Binding AddExtensionCommand}"
-                Content="&#xe6aa;"
-                FontFamily="/DevKit;component/Fonts/#iconfont"
-                Foreground="{DynamicResource PrimaryBrush}"
-                ToolTip="添加扩展指令" />
+                Content="添加扩展指令" />
 
             <CheckBox
                 x:Name="LoopCheckBox"
