--- a/DevKit/Views/UdpClientView.xaml
+++ b/DevKit/Views/UdpClientView.xaml
@@ -211,10 +211,7 @@
                 Grid.Column="1"
                 Margin="10,0"
                 Command="{Binding ExtensionCommand}"
-                Content="&#xe6aa;"
-                FontFamily="/DevKit;component/Fonts/#iconfont"
-                Foreground="{DynamicResource PrimaryBrush}"
-                ToolTip="添加扩展指令" />
+                Content="添加扩展指令" />
 
             <CheckBox
                 x:Name="LoopCheckBox"
