--- a/DevKit/Views/ApplicationPackageView.xaml
+++ b/DevKit/Views/ApplicationPackageView.xaml
@@ -207,36 +207,23 @@
 
             <ListBox.ItemTemplate>
                 <DataTemplate>
-                    <Grid Margin="0,7">
+                    <Grid>
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition />
                             <ColumnDefinition Width="Auto" />
                         </Grid.ColumnDefinitions>
 
-                        <Grid Grid.Column="0">
-                            <Grid.RowDefinitions>
-                                <RowDefinition />
-                                <RowDefinition />
-                            </Grid.RowDefinitions>
-
-                            <TextBlock
-                                Grid.Row="0"
-                                HorizontalAlignment="Stretch"
-                                FontSize="14"
-                                Text="{Binding FileName}" />
-
-                            <TextBlock
-                                Grid.Row="1"
-                                Margin="0,3,0,0"
-                                HorizontalAlignment="Stretch"
-                                Text="{Binding FullPath}" />
-                        </Grid>
+                        <TextBlock
+                            Grid.Column="0"
+                            VerticalAlignment="Center"
+                            Text="{Binding}"
+                            TextWrapping="Wrap" />
 
                         <Button
                             Grid.Column="1"
                             BorderThickness="0"
                             Command="{Binding DataContext.OpenFileFolderCommand, ElementName=TargetListBox}"
-                            CommandParameter="{Binding FullPath}"
+                            CommandParameter="{Binding}"
                             Content="&#xe701;"
                             FontFamily="/DevKit;component/Fonts/#iconfont"
                             FontSize="16" />
@@ -246,24 +233,22 @@
 
             <ListBox.ItemContainerStyle>
                 <Style TargetType="ListBoxItem">
-                    <Setter Property="Margin" Value="0,0,0,5" />
                     <Setter Property="Template">
                         <Setter.Value>
                             <ControlTemplate TargetType="{x:Type ListBoxItem}">
                                 <Border
                                     x:Name="ItemContainerBorder"
-                                    Padding="7,0"
+                                    Padding="10"
                                     BorderBrush="{StaticResource BorderBrush}"
-                                    BorderThickness="1"
+                                    BorderThickness="0"
                                     CornerRadius="5">
-                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
+                                    <ContentPresenter HorizontalAlignment="Stretch" VerticalAlignment="Center" />
                                 </Border>
 
                                 <ControlTemplate.Triggers>
                                     <Trigger Property="IsSelected" Value="True">
                                         <Setter TargetName="ItemContainerBorder" Property="Background" Value="{DynamicResource DarkDefaultBrush}" />
                                         <Setter TargetName="ItemContainerBorder" Property="TextBlock.Foreground" Value="{DynamicResource PrimaryBrush}" />
-                                        <Setter TargetName="ItemContainerBorder" Property="TextBlock.FontWeight" Value="Bold" />
                                     </Trigger>
                                 </ControlTemplate.Triggers>
                             </ControlTemplate>
